--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="//code.tidio.co/drob7riodpscr1bt2aingjbcz3nehwao.js" async></script>
   </body>
 </html>
